[metadata]
name = lshw
version = 0.0.1
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = lshw is a small tool to extract detailed information on the hardware configuration of the machine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-none/python-lshw
project_urls =
    Bug Tracker = https://github.com/null-none/python-lshw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src